--- a/code/MoodSync/app/src/main/res/values/themes.xml
+++ b/code/MoodSync/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.MoodSync" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+         <item name="colorPrimary">#00000000</item>
     </style>
 
     <style name="Theme.MoodSync" parent="Base.Theme.MoodSync" />
