Location functionality works

--- a/code/MoodSync/app/src/main/res/navigation/nav_graph.xml
+++ b/code/MoodSync/app/src/main/res/navigation/nav_graph.xml
@@ -71,7 +71,7 @@
             app:destination="@id/editProfileFragment" />
         <action
             android:id="@+id/action_SecondFragment_to_mapsActivity"
-            app:destination="@id/mapsActivity" />
+            app:destination="@id/mapFragment" />
         <action
             android:id="@+id/action_SecondFragment_to_JournalFragment"
             app:destination="@id/JournalFragment" />
@@ -87,7 +87,7 @@
             app:destination="@id/SecondFragment" />
         <action
             android:id="@+id/action_JournalFragment_to_mapsActivity"
-            app:destination="@id/mapsActivity" />
+            app:destination="@id/mapFragment" />
         <action
             android:id="@+id/action_JournalFragment_to_addMoodActivityFragment"
             app:destination="@id/addMoodActivityFragment" />
@@ -96,11 +96,30 @@
             app:destination="@id/moodHistoryFragment" />
     </fragment>
 
-    <activity
-        android:id="@+id/mapsActivity"
-        android:name="com.example.moodsync.MapsActivity"
-        android:label="MapsActivity" />
-
+    <fragment
+        android:id="@+id/mapFragment"
+        android:name="com.example.moodsync.MapFragment"
+        android:label="MapFragment"
+        tools:layout="@layout/fragment_map">
+        <action
+            android:id="@+id/action_mapFragment_to_editMoodFragment"
+            app:destination="@id/editMoodActivityFragment" />
+        <action
+            android:id="@+id/action_mapFragment_to_SecondFragment"
+            app:destination="@id/SecondFragment" />
+        <action
+            android:id="@+id/action_mapFragment_to_mapsActivity"
+            app:destination="@id/mapFragment" />
+        <action
+            android:id="@+id/action_mapFragment_to_addMoodActivityFragment"
+            app:destination="@id/addMoodActivityFragment" />
+        <action
+            android:id="@+id/action_mapFragment_to_moodHistoryFragment"
+            app:destination="@id/moodHistoryFragment" />
+        <action
+            android:id="@+id/action_mapFragment_to_JournalFragment"
+            app:destination="@id/JournalFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/addMoodActivityFragment"
@@ -139,7 +158,7 @@
             app:destination="@id/SecondFragment" />
         <action
             android:id="@+id/action_moodHistoryFragment_to_mapsActivity"
-            app:destination="@id/mapsActivity" />
+            app:destination="@id/mapFragment" />
         <action
             android:id="@+id/action_moodHistoryFragment_to_addMoodActivityFragment"
             app:destination="@id/addMoodActivityFragment" />
