--- a/code/MoodSync/app/src/main/res/layout/custom_marker.xml
+++ b/code/MoodSync/app/src/main/res/layout/custom_marker.xml
@@ -4,33 +4,36 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:layout_width="50dp"
-        android:layout_height="60dp"
+        android:layout_width="80dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="5dp"
         android:src="@drawable/ic_location" />
 
     <ImageView
         android:id="@+id/marker_image"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_gravity="top|center"
-        android:layout_marginTop="11dp"
-        android:background="@drawable/circle_background"
-
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="2dp"
+        android:background="@drawable/circle_background_marker"
+        android:src="@drawable/ic_person_black_24dp"
         android:scaleType="centerCrop" />
 
     <TextView
         android:id="@+id/marker_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Username"
-        android:layout_gravity="top|center"
-
+        android:layout_gravity="top|center_horizontal"
+        android:layout_marginTop="2dp"
         android:background="@drawable/rounded_text_background"
+        android:text="Username"
         android:textColor="@android:color/white"
-        android:textSize="10sp"
-        android:paddingStart="2dp"
-        android:paddingEnd="2dp"
-        />
+        android:textSize="14sp"
+        android:paddingVertical="3dp"
+        android:paddingHorizontal="8dp"
+        android:elevation="4dp" />
 
     <TextView
         android:id="@+id/marker_emoji"
@@ -41,5 +44,5 @@
         android:text="🔥"
         android:layout_marginBottom="5dp"
         android:layout_marginEnd="5dp"
-        android:textSize="18sp" />
+        android:textSize="30sp" />
 </FrameLayout>
