--- a/code/MoodSync/app/src/main/res/layout/fragment_map.xml
+++ b/code/MoodSync/app/src/main/res/layout/fragment_map.xml
@@ -8,8 +8,6 @@
     android:id="@+id/mapFragment"
     android:background="#203434">
 
-    <!-- Card view for current location -->
-
     <!-- Filter Functionality -->
 
     <fragment
@@ -28,6 +26,18 @@
         tools:context=".MapFragment" />
 
     <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_container"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/mapFilterFunction"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -35,7 +45,6 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/bottom_nav_container"
         app:layout_constraintEnd_toEndOf="parent"
-
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -66,7 +75,8 @@
             android:background="@drawable/spinner_rounded_border"
             android:fontFamily="sans-serif"
             android:paddingStart="16dp"
-            android:visibility="invisible" />
+            android:visibility="invisible"
+             />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/mapFilterClearButton"
@@ -82,6 +92,24 @@
             android:visibility="invisible"
             app:cornerRadius="12dp" />
     </LinearLayout>
+
+    <Spinner
+        android:id="@+id/mapFilterSpinner2"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginHorizontal="50dp"
+        android:layout_weight="1"
+        android:background="@drawable/spinner_rounded_border"
+        android:fontFamily="sans-serif"
+        android:paddingStart="16dp"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_container"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="invisible"
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@+id/mapFilterFunction" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/bottom_nav_container"
