--- a/code/MoodSync/app/src/main/res/layout/main_mood_card_item.xml
+++ b/code/MoodSync/app/src/main/res/layout/main_mood_card_item.xml
@@ -212,7 +212,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Trigger: "
+                android:text="Reason: "
                 android:textColor="#757575"
                 android:textSize="13sp"
                 android:layout_marginStart="6dp" />
