--- a/code/MoodSync/app/src/main/res/layout/main_mood_card_item.xml
+++ b/code/MoodSync/app/src/main/res/layout/main_mood_card_item.xml
@@ -157,12 +157,14 @@
 
                 <TextView
                     android:id="@+id/comment_count"
-                    android:layout_width="wrap_content"
+                    android:layout_width="20dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginBottom="2dp"
                     android:text="8"
                     android:textColor="#757575"
-                    android:textSize="14sp"
-                    android:layout_marginStart="4dp"/>
+                    android:textSize="14sp" />
+                />
             </LinearLayout>
 
             <!-- Small Music Player -->
