--- a/code/MoodSync/app/src/main/res/layout/edit_mood_fragment2.xml
+++ b/code/MoodSync/app/src/main/res/layout/edit_mood_fragment2.xml
@@ -50,21 +50,20 @@
         android:id="@+id/reasonLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-<<<<<<< Updated upstream
         android:layout_alignParentTop="true"
         android:layout_marginTop="86dp"
         android:text="What was the reason for this mood?"
         android:textColor="#FBFAF5"
         android:textSize="22sp"
         android:textStyle="bold" />
-=======
-        android:layout_below="@id/cancel"
-        android:layout_marginTop="70dp"
-        android:text="What was the reason for this mood?"
-        android:textStyle="bold"
-        android:textAppearance="@style/cancel"
-        android:textSize="18sp" />
->>>>>>> Stashed changes
+<!--=======-->
+<!--        android:layout_below="@id/cancel"-->
+<!--        android:layout_marginTop="70dp"-->
+<!--        android:text="What was the reason for this mood?"-->
+<!--        android:textStyle="bold"-->
+<!--        android:textAppearance="@style/cancel"-->
+<!--        android:textSize="18sp" />-->
+<!--&gt;>>>>>> Stashed changes-->
 
     <EditText
         android:id="@+id/ReasonInput"
