--- a/code/MoodSync/app/src/main/res/layout/edit_profile_page.xml
+++ b/code/MoodSync/app/src/main/res/layout/edit_profile_page.xml
@@ -30,7 +30,7 @@
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:backgroundTint="#9ca49c"
+        app:backgroundTint="#0096FF"
         app:cornerRadius="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,11 +45,11 @@
         android:layout_marginEnd="32dp"
         android:layout_weight="1"
         android:elevation="2dp"
-        android:text="Back"
+        android:text="Cancel"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:backgroundTint="#9ca49c"
+        app:backgroundTint="#FF6961"
         app:cornerRadius="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/confirmbutton"
@@ -59,15 +59,15 @@
         app:layout_constraintVertical_bias="0.363"
         app:rippleColor="#FFFFFF" />
 
-    <ImageView
-        android:id="@+id/back_button"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="34dp"
-        android:padding="8dp"
-        android:src="@drawable/ic_arrow_black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+<!--    <ImageView-->
+<!--        android:id="@+id/back_button"-->
+<!--        android:layout_width="40dp"-->
+<!--        android:layout_height="40dp"-->
+<!--        android:layout_marginTop="34dp"-->
+<!--        android:padding="8dp"-->
+<!--        android:src="@drawable/ic_arrow_black"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
 
     <TextView
         android:id="@+id/textView3"
