--- a/code/MoodSync/app/src/main/res/layout/main_mood_card_item.xml
+++ b/code/MoodSync/app/src/main/res/layout/main_mood_card_item.xml
@@ -131,6 +131,20 @@
             android:background="@drawable/ic_image_black_24dp"/>
 
         <!-- Enhanced Post Actions with Material Icons -->
+
+
+        <!-- Aligns to the right -->
+
+        <ImageButton
+            android:id="@+id/playButton"
+            android:layout_width="28dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="Play music"
+            android:src="@drawable/sound_up"
+            app:tint="#625C5C" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -179,31 +193,17 @@
                 <TextView
                     android:id="@+id/song_title"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:ellipsize="end"
+                    android:maxLines="1"
                     android:text="Song Title"
                     android:textColor="#555555"
-                    android:textSize="12sp"
-                    android:maxLines="1"
-                    android:ellipsize="end"/>
+                    android:textSize="12sp" />
 
-                <SeekBar
-                    android:id="@+id/music_seekbar"
-                    android:layout_width="80dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="8dp"
-                    android:progressTint="#3F51B5"
-                    android:thumbTint="#3F51B5"
-                    android:maxHeight="2dp"/>
 
-                <ImageButton
-                    android:id="@+id/playButton"
-                    android:layout_width="28dp"
-                    android:layout_height="28dp"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:contentDescription="Play music"
-                    android:src="@android:drawable/ic_media_play"
-                    app:tint="#3F51B5" />
+
+
             </LinearLayout>
         </LinearLayout>
 
