--- a/code/MoodSync/app/src/main/res/layout/edit_mood_fragment.xml
+++ b/code/MoodSync/app/src/main/res/layout/edit_mood_fragment.xml
@@ -18,13 +18,15 @@
 
         <TextView
             android:id="@+id/stepIndicator"
-            android:layout_width="wrap_content"
+            android:layout_width="49dp"
             android:layout_height="wrap_content"
+            android:layout_above="@+id/pick_mood"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginStart="240dp"
+            android:layout_marginStart="326dp"
             android:layout_marginTop="27dp"
-            android:layout_marginEnd="17dp"
+            android:layout_marginEnd="64dp"
+            android:layout_marginBottom="6dp"
             android:layout_toEndOf="@+id/cancel"
             android:background="@drawable/step_indicator_background"
             android:paddingHorizontal="12dp"
@@ -278,10 +280,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/add_photos_section"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
             android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="24dp"
-            android:layout_marginBottom="24dp"
             android:background="@drawable/next_button_background"
             android:backgroundTint="#D7D2CC"
             android:paddingVertical="12dp"
@@ -291,6 +294,7 @@
             app:backgroundTint="#F4F2C9"
             app:cornerRadius="15dp"
             app:strokeWidth="1dp" />
+
 
     </RelativeLayout>
 </RelativeLayout>
