--- a/code/MoodSync/app/src/main/res/values/styles.xml
+++ b/code/MoodSync/app/src/main/res/values/styles.xml
@@ -110,6 +110,10 @@
         <item name="android:windowEnterAnimation">@anim/slide_down</item>
         <item name="android:windowExitAnimation">@anim/slide_up</item>
     </style>
+    <style name="TransparentDialog" parent="Theme.MaterialComponents.Light.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimEnabled">true</item>
+    </style>
 
 
 </resources>
